--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -22,6 +22,9 @@ task:
       memory: 20G
 
   Checks_script:
+      - apt-get -yqq update
+      - apt-get -yqq upgrade
+      - apt-get install -yqq rclone
       - echo "$rcloneconfig" > ~/.config/rclone/rclone.conf
       - bash -c "$(curl -sL https://raw.githubusercontent.com/z3zens/OrangeFox-CI/main/scripts/checks.sh)"
 
