--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -23,6 +23,7 @@ task:
 
   Checks_script:
       - pacman -Sy --noconfirm rclone
+      - mkdir -p ~/.config/rclone
       - echo "$rcloneconfig" > ~/.config/rclone/rclone.conf
       - bash -c "$(curl -sL https://raw.githubusercontent.com/z3zens/OrangeFox-CI/main/scripts/checks.sh)"
 
